public/material.css
body {
    overflow-y: hidden; /* disable chrome pull-down-to-refresh */
}
svg {
    width: 32px;
    height: 32px;
}
path {
    transition: fill 250ms linear;
}
svg.connected > g > path {
    fill: #FFF;
}

svg.connected > path:first-child {
    fill: #FFF;
}

svg.disconnected > path:first-child {
    fill: #F00;
}

.mdl-layout {
    overflow-y: hidden;
}

div.mdl-layout-icon-svg {
    width: 32px;
    height: 32px;
    display: inline-block;
}

input:-webkit-autofill {
    -webkit-box-shadow: 0 0 0px 1000px white inset;
}

#content.stretch {
    flex: 1 1 auto;
    overflow-y: scroll;
}

span.rounded > img.avatar {
    display: inline;
    height: 100%;
    width: auto;
    min-width: 100%;
    margin: 0 auto;
}

span.timestamp {
    color: #BBB;
    float: right;
    cursor: default;
}

span.rounded {
    vertical-align: middle;
    display: inline-block;
    position: relative;
    border-radius: 50%;
    width: 40px;
    height: 40px;
    margin: 0 auto;
    overflow: hidden;
}
div#chat-log img, div#chat-log video {
    max-width: 95%;
    max-height: 200px;
}
span.sender a {
    color: rgba(0,0,0,.87);
    margin-left: 10px;
    font-weight: bold;
    position: relative;
    top: 2px;
    text-decoration: none;
}

span.sender.source-gliph:after {
    content: ' (via gliph)';
    color: #BBB;
    font-weight: normal;
}

div.message a {
    word-break: break-all;
}

div.message p {
    margin-bottom: 3px;
}

div.message {
    margin-left: 50px;
}

blockquote {
  background: #f9f9f9;
  border-left: 10px solid #ccc;
  margin: 1.5em 10px;
  padding: 0.5em 10px;
  quotes: "\201C""\201D""\2018""\2019";
}
blockquote:before {
  color: #ccc;
  content: open-quote;
  font-size: 4em;
  line-height: 0.1em;
  margin-right: 0.25em;
  vertical-align: -0.4em;
}
blockquote p {
  display: inline;
}

input[type="file"] {
    display: none;
}

div#pending-media {
    background-color: #FFF;
    margin: 0px 60px;
}

div.message-media i {
    position: absolute;
    top: 0px;
    right: 0px;
    padding: 5px;
    color: rgba(193, 25, 0, 0.9);
    cursor: pointer;
}
/* Comments for awful class names */

/* Container for media pending to be sent */
div.message-media {
    margin: 5px;
    position: relative;
    display: inline-block;
    width: auto;
}

/* Media in a chat message */
div.message.media {
    margin-bottom: 10px;
}

div#pending-media .mdl-spinner {
    margin: 25px;
    display: inline-block;
    transition: all 0.25s;
}

div#pending-media .mdl-spinner.animate-visible {
    width: 28px;
    height: 28px;
}

div#pending-media canvas, div#pending-media img {
    max-height: 75px;
}

a.yt-thumbnail-link {
    position: relative;
}

a.yt-thumbnail-link img {
    max-height: 150px;
}

a.yt-thumbnail-link i {
    color: #e52d27;
    position: absolute;
    width: 100%;
    text-align: center;
    font-size: 100px;
    margin: 50px auto;
    opacity: 0.8;
}

div.message.media {
    margin-bottom: 15px;
}

form#compose {
    width: 100%;
}

textarea#compose-message, textarea#compose-message:focus {
    box-sizing: border-box;
    min-height: 20px;
    max-height: 180px;
    width: 100%;
    resize: none;
    font-size: 16px;
    padding: 5px 60px;
    padding-top: 15px;
    border: none;
    outline: none;
    -webkit-box-shadow: none;
    -moz-box-shadow: none;
    box-shadow: none;
}

button#send-button {
    position: fixed;
    cursor: pointer;
    right: 0px;
    bottom: 0px;
    background: none;
    border: none;
    border-left: 1px solid #DDD;
    width: 70px;
    height: 50px;
    outline: none;
}

label#attach-media-button {
  height: 100%;
  width: 100%;
  cursor: pointer;
  position: absolute;
  top: 0px;
  right: 0px;
  z-index: 2;
}

.footer-light {
    background-color: #FFF;
    padding: 0px;
}

main#content {
    padding-top: 20px;
    padding-left: 20px;
    padding-right: 20px;
    padding-bottom: 0px;
}

div#chat-log {
    padding-bottom: 10px;
}

form#compose .mdl-grid {
    padding: 0;
}
form#compose .mdl-button {
    min-width: 20px !important;
    position: fixed;
    bottom: 10px;
    height: 40px;
}
form#compose .mdl-button.send {
    right: 0px;
}


.mdl-progress {
    height: 4px;
    margin: 10px auto;
    transition: all 0.25s;
}
.mdl-progress.off {
    height: 0px;
}

#content {
    position: relative;
}
#chat-log {
    overflow: auto;
    display: none;
}


/*
 * Loading Narwhal
 */

.preload span {
  display: table-cell;
  vertical-align: middle;
}
.preload img.narwhal {
    height: 200px;
}
.preload {
    z-index: 9999;
    position: fixed;
    top: 0px;
    left: 0px;
    width: 100%;
    height: 100%;
    background-color: #FFF;
    text-align: center;
    display: table;
}

/**
 * Night Mode
 */
.nightmode .preload {
    background-color: #2d2d2d;
}

/* Top Bar */
.nightmode .mdl-layout__header {
    background-color: #222;
    color: #fff;
}

.nightmode a {
    color: #cc9966;
}
.nightmode span.timestamp {
    color: #f2f0ec;
}

.nightmode,
.nightmode .footer-light,
.nightmode textarea
{
    background-color: #2d2d2d;
    color: #d3d0c8;
}
.nightmode .mdl-button,
.nightmode span.sender a
{
    color: #d3d0c8;
}
.nightmode blockquote {
    background-color: #222;
}
.nightmode div#pending-media {
    background-color: #2d2d2d;
}
.nightmode span.new-user a {
    color: green !important;
}
.nightmode .mdl-shadow--8dp {
    box-shadow: 0 8px 10px 1px rgba(255,255,255,.14), 0 3px 14px 2px rgba(255,255,255,.12), 0 5px 5px -3px rgba(255,255,255,.2) !important;
}

/**
 * Debug
 */
.eruda-container .eruda-entry-btn {
    opacity: 0.6 !important;
    margin-top: -55px;
}

